# mini-laboratorios

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
final_project/: README.md  pyproject.toml
final_project/final_project/output/: reporte_covid.xlsx  tabla_perfilado.csv
final_project/src/final_project/: assets.py  definitions.py
labs/lab1/: main.py
labs/lab2/: main.py  modulo_cadenas.py  notas.md
labs/lab2/textkit/: __init__.py  cleaners.py  validators.py
labs/lab3/: notas.md
labs/lab3/src/: main.py  operaciones.py  operaciones_buggy.py
labs/lab3/tests/: test_operaciones.py
labs/lab4/: main.py  notas.md  ventas_demo.csv
labs/lab4/output/: duckdb_resumen.parquet  pandas_resumen.csv  pandas_resumen.parquet
labs/lab5/: notas.md
labs/lab5/data/: sample.csv
labs/lab5/src/: csv_validation.py  main.py  textutils.py
labs/lab5/tests/: test_csv_validation.py  test_textutils.py
